[gd_scene load_steps=16 format=3 uid="uid://dy4xpkid3h348"]

[ext_resource type="Script" path="res://assets/scripts/Window.gd" id="1_yxa3m"]
[ext_resource type="Texture2D" uid="uid://cx2av8wvxletf" path="res://assets/images/Window.png" id="2_h8qhp"]
[ext_resource type="FontFile" uid="uid://dpn5ojmw5tfo7" path="res://assets/fonts/Monocraft.otf" id="5_po7ac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvhxu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_835cd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qucb5"]

[sub_resource type="GDScript" id="GDScript_twtvb"]
resource_name = "TextEditorScript"
script/source = "extends TextEdit
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_focus_entered():
	set_editable(true)
	print(\"focus in\")

func _on_focus_exited():
	set_editable(false)
	print(\"focus out\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4frm6"]
size = Vector2(45.6667, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5sgp"]
size = Vector2(63.795, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ran"]
size = Vector2(64, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_miqlr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04nap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gujhp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpff2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwsa0"]

[node name="Window" type="CharacterBody2D"]
position = Vector2(85, 88)
scale = Vector2(3, 3)
disable_mode = 2
collision_priority = 3.0
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_constant_speed = true
floor_block_on_wall = false
platform_floor_layers = 0
platform_wall_layers = 1
script = ExtResource("1_yxa3m")

[node name="SpriteOfWindow" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_h8qhp")

[node name="Name" type="TextEdit" parent="SpriteOfWindow"]
offset_left = -300.0
offset_top = -320.0
offset_right = 120.0
offset_bottom = -270.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_po7ac")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvhxu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_835cd")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_qucb5")
text = "notepad.txt"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
metadata/_edit_use_anchors_ = true

[node name="TextEditor" type="TextEdit" parent="SpriteOfWindow"]
anchors_preset = -1
anchor_right = 0.270312
anchor_bottom = 0.745588
offset_left = -300.0
offset_top = -240.0
offset_right = 120.0
offset_bottom = -190.0
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_po7ac")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvhxu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_835cd")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_qucb5")
text = "Just little
notepad :3"
editable = false
context_menu_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
script = SubResource("GDScript_twtvb")
metadata/_edit_use_anchors_ = true

[node name="Signal" type="Area2D" parent="."]

[node name="MoveBox" type="CollisionShape2D" parent="Signal"]
visible = false
position = Vector2(-9.16667, -30)
shape = SubResource("RectangleShape2D_4frm6")
debug_color = Color(0, 0.643137, 0.282353, 0.419608)

[node name="GroundBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.102501, -30)
shape = SubResource("RectangleShape2D_x5sgp")
one_way_collision = true

[node name="InGroundBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 33.5)
shape = SubResource("RectangleShape2D_h5ran")
one_way_collision = true

[node name="SwipeOut" type="Button" parent="."]
offset_left = 13.6667
offset_top = -34.0
offset_right = 23.6667
offset_bottom = -24.0
scale = Vector2(0.565, 0.8)
theme_override_styles/normal = SubResource("StyleBoxEmpty_miqlr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_04nap")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gujhp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vpff2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwsa0")

[connection signal="focus_entered" from="SpriteOfWindow/TextEditor" to="SpriteOfWindow/TextEditor" method="_on_focus_entered"]
[connection signal="focus_exited" from="SpriteOfWindow/TextEditor" to="SpriteOfWindow/TextEditor" method="_on_focus_exited"]
[connection signal="area_entered" from="Signal" to="." method="window_entered"]
[connection signal="area_exited" from="Signal" to="." method="window_exited"]
[connection signal="mouse_entered" from="Signal" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="Signal" to="." method="mouse_exited"]
[connection signal="pressed" from="SwipeOut" to="." method="_on_swipe_out_pressed"]
